--- a/english/word/low-frequency/007-012.md
+++ b/english/word/low-frequency/007-012.md
@@ -206,7 +206,9 @@
     - adj. 未被意识到的
     - The trend in sports, though, may be obscuring an **unrecognized** reality: Americans have generally stopped
       growing.
-        - obscure [əbˈskjʊr] adj. 鲜为人知的；费解的
+        - obscure [əbˈskjʊr]
+            - v. 使...模糊，蒙蔽
+            - adj. 鲜为人知的；费解的；昏暗的，模糊的
 - instructive [ɪnˈstrʌktɪv]
     - adj. 有启发性的
     - instruct sb. to do sth.
