--- a/english/word/low-frequency/061-066.md
+++ b/english/word/low-frequency/061-066.md
@@ -30,29 +30,32 @@
     - adj. （物种）濒危的
 - animation
     - n. 动画片
-- banqueting
+- banqueting [ˈbæŋkwɪtɪŋ]
     - adj. 宴会的
     - banquet [ˈbæŋkwɪt] n. 宴会，盛宴
 - darkness
     - n. 黑暗
     - Nicholas Nickleby, his next novel, combines the **darkness** of Oliver Twist with the sunlight of Pickwick.
-- nerve
+- nerve [nɜːrv]
     - n. 勇气
     - have the nerve to do sth. 有勇气做某事
 
 ## 062
 
-- apprenticeship
+- apprenticeship [əˈprɛntɪsʃɪp]
     - n. 学徒身份
-- millennium
+- millennium [mɪˈleniəm]
     - n. 千年期
-    - millennial n. 千禧一代（1982-1995）
-- observatory
+    - millennial [mɪˈleniəl] n. 千禧一代（1982-1995）
+- observatory [əbˈzɜːrvətɔːri]
     - n. 天文台
-    - *Protests(n. 抗议)* have erupted over construction of the Thirty Meter Telescope(TMT), a giant **observatory**
-      that promises to revolutionize humanity's view of the cosmos.
-    - observable adj. 能观察到的
-    - observe - vt. 观察；注意到
+    - *Protests(n. 抗议)* have *erupted([ɪˈrʌpt] v. 喷发; 爆发)* over construction of the Thirty Meter Telescope(TMT), a
+      giant **observatory** that promises to revolutionize humanity's view of the *cosmos([ˈkɑːzmoʊs] n. 宇宙)*.
+        - erupt over sth 因...而爆发（争议/冲突）
+        - promise(s) to do sth 有望...；预示着...
+        - revolutionize one's view of... 彻底改变某人对...的看法/认知
+    - observable [əbˈzɜrvəbl] adj. 能观察到的
+    - observe [əbˈzɜːrv] vt. 观察；注意到
 - encyclopedia
     - n. 百科全书
 - selectively
@@ -65,18 +68,18 @@
         - let sb. do sth.
 - destination
     - n. 目的地
-- acutely
-    - adv. 强烈的
+- acutely [əˈkjuːtli]
+    - adv. 强烈地
 
 ## 063
 
 - addictive 😔
     - adj. 使人上瘾的
-- formidable
+- formidable [ˈfɔːrmɪdəbl]
     - adj. 令人敬畏的
-    - Even Tommasini, who had advocated Cilbert's appointment in the Times, calls him "an unpretentious musician with no
-      air of the **formidable** conductor about him."
-- demoralization
+    - Even Tommasini, who had *advocated([ˈædvəkeɪt]  vt. 提倡；主张)* Cilbert's appointment in the Times, calls him "an
+      *unpretentious(adj. 谦逊的 == modest)* musician with no air of the **formidable** conductor about him."
+- demoralization [dɪˌmɒrəlaɪ'zeɪʃn]
     - n. 士气低落
     - moral [ˈmɔːrəl]
         - adj. 道德的
@@ -87,53 +90,53 @@
 - simulate
     - vt. 模仿
     - simulation n. 模拟
-- citizenry
+- citizenry [ˈsɪtɪzənri]
     - n. 全体市民（或公民）
     - citizenship n. 公民身份
-- archive
+- archive [ˈɑːrkaɪv]
     - n. 档案室
-- earnestness
+- earnestness ['ɜnɪstnəs]
     - n. 认真
     - == sincerity [sɪn'serəti] n. 真挚，诚心诚意，诚意; 笃实; 襟怀坦白
 
 ## 064
 
-- companionship
+- companionship [kəmˈpænjənˌʃɪp]
     - n. 友谊
     - I depended on his **companionship** and on his judgement.
-    - companion n. 陪伴
+    - companion [kəmˈpæniən] n. 陪伴
 - slowdown
     - n. 放缓
-- ornament
+- ornament [ˈɔːrnəmənt]
     - n. 装饰
     - == decoration n. 装饰
     - The building is an **ornament** to the city. 这座建筑物为整个城市增色不少
-- signify
+- signify [ˈsɪɡnɪfaɪ]
     - vt. 代表
-- parcel
+- parcel [ˈpɑːrsl]
     - n. 一部分
     - part and parcel of ...的重要部分
-- amiable
+- amiable [ˈeɪmiəbl]
     - adj. 和蔼可亲的
     - == cordial [ˈkɔːrdʒəl] adj. 友好的，可亲的
-- editorial
+- editorial [ˌedɪˈtɔːriəl]
     - n. （报纸的）社论
-- resort
+- resort [rɪˈzɔːrt]
     - vi. 采取
     - n. 度假胜地
 - constancy
     - n. 坚贞；始终如一
-- masculine
+- masculine [ˈmæskjəlɪn]
     - adj. 男子气概的
 
 ## 065
 
-- capability
+- capability [ˌkeɪpəˈbɪləti]
     - n. 能力
+    - == ability n. 能力
     - capable [ˈkeɪpəbl]
         - adj. 有能力的
         - be capable to do sth.
-    - == ability n. 能力
 - uniformly
     - adv. 一致地
     - uniformity n. 一致（性）
@@ -143,19 +146,22 @@
         - uniform rule 统一的规则
 - credential
     - n. 证明书
-- dramatist
+- dramatist [ˈdræmətɪst]
     - n. 剧作家
 - upside
     - n. （不利局面中）好的方面
-    - Looking for the upside in Challenging Times.
+    - Looking for the **upside** in Challenging Times.
+        - challenging times 艰难时期，充满挑战的阶段
     - The **upside** is the possibilities contained in knowing that everything is up to us.
-        - // TODO be up to sb. 一切取决于某人
+      积极的一面在于：当我们意识到一切都掌握在自己手中时，其中蕴含着无限的可能性
+        - the possibilities contained in... 蕴含其中的可能性
+        - be up to sb. 一切取决于某人
     - downside n. 不利的一面
 - crust
     - n. （糕饼的）酥皮
-- beverage
+- beverage [ˈbevərɪdʒ]
     - n. 饮料
-- livestock
+- livestock [ˈlaɪvstɑːk]
     - n. 牲畜
 - goallessness
     - n. 无目标
@@ -167,29 +173,34 @@
 - proficient
     - adj. 精通的
     - be proficient in sth. 精通某事
-    - The children of immigrants tend to be bilingual and **proficient** in English.
+    - The children of immigrants tend to be *bilingual([ˌbaɪˈlɪŋɡwəl] adj. 双语的)* and **proficient** in English.
     - proficiency [prəˈfɪʃnsi]
         - n. 熟练，精通，娴熟
-        - When you serve your passions, **proficiency** gradually takes over and becomes habitual.
+        - When you serve your passions, **proficiency** *gradually(adv. 逐渐地)* takes over and becomes
+          *habitual([həˈbɪtʃuəl] adj. 习惯性的)*.
+            - serve + abstract noun(抽象名词) 为...服务/投身于...
+            - take over 接管，占据主导，逐渐取而代之
+            - gradually takes over 慢慢地、不知不觉地占据主导地位
 - boot
     - v. 启动
-    - All I have to do is to go t omy CD shelf, or **boot** up my computer and download still more recorded music from
+    - All I have to do is to go to my CD shelf, or **boot** up my computer and download still more recorded music from
       iTunes.
+        - all I have to do is (to) + do 我只需要做的事情就是...
         - boot up 启动
-- scent
+- scent [sent]
     - vt. 闻到
     - n. 气味
-- eminent
+- eminent [ˈemɪnənt]
     - adj. 杰出的
     - == prominent [ˈprɑːmɪnənt] adj. 杰出的；显著的
-- dynamism
+- dynamism [ˈdaɪnəˌmɪzəm]
     - n. 活力
     - dynamic n. 动态
 - worktable
     - n. 工作台
 - workstation
     - n. 工作站
-- feverish
+- feverish [ˈfiːvərɪʃ]
     - adj. 狂热的
     - fever [ˈfiːvər] n. 发烧，热度；一时的狂热
 
@@ -203,7 +214,7 @@
     - n. 优雅
 - idleness
     - v. 懒
-    - == lazy
+    - == lazy adj. 懒散的
 - trivial [ˈtrɪviəl]
     - adj. 不重要的，琐碎的
 - notable [ˈnoʊtəbl]
@@ -213,5 +224,3 @@
 ## 词组
 
 ## 句式
-
-
