--- a/english/word/low-frequency/067-072.md
+++ b/english/word/low-frequency/067-072.md
@@ -25,16 +25,17 @@
     - diplomacy n. 外交
 - fearful
     - adj. 担心的
-- dearsome
-    - adj. 可怕的
+    - == worried
+    - fearsome adj. 可怕的
 - loosen
     - vt. 放松对...的管控
+    - Oppfasten: fasten v. 扣牢; 关紧; 使牢固; 系上; 抓牢; 盯住
     - loose n. 放松
-    - fasten 加紧
 - rebel
     - vi. 反抗
-    - repress
-    - resist
+    - n. 造反者
+    - repress v. 抑制; 镇压; 压抑
+    - resist v. 抵制
 - uneconomic
     - adj. 不赢利的
 - replaceable
@@ -46,37 +47,41 @@
 
 - cultivation
     - n. 种植
+    - cultivate v. 培养，培育，养育
 - singular
-    - adj. 显著的 (very)
-    - Looking around，I despaired at the singular lack of imagination about girls' lives and interests.
+    - adj. 显著的
+    - == very
+    - Looking around, I despaired at the **singular** lack of imagination about girls' lives and interests.
 - interior
     - adj. 内部的
 - unmistakable
     - adj. 不会弄错的
 - confrontation
     - n. 对抗
+    - confront 😔 vt. 面临（问题、任务、困难等）
 - grammatical
     - adj. 语法的
 - intensely
-    - adv. 强烈的
+    - adv. 强烈地
 - counteraction
     - n. 抵抗
 - preach
-    - v. 布道
-    - Although nowadays people in mounting numbers talk about the need to be unselfish,we see very few people practice
-      what they preach. 尽管现在越来越多的人谈论无私的必要性，但我们看到很少有人言行一致。
+    - v. 宣扬，宣称；布道
+    - Practice what you preach. 言行一致
+    - Although nowadays people in mounting numbers talk about the need to be unselfish, we see very few people practice
+      what they **preach**. 尽管现在越来越多的人谈论无私的必要性，但我们看到很少有人言行一致。
 - indirectly
     - adv. 间接地
 
 ## 069
 
 - realism
-    - n. 务实作风
-- collectively
-    - adv. 集体地
+    - n. 务实作风；现实主义
 - unrealistically
     - adv. 不现实地
-- aethetic
+- collectively
+    - adv. 集体地
+- aesthetic
     - adj. 美学的
 - policymaking
     - n. 制定政策
@@ -84,15 +89,13 @@
     - n. 确认
 - willfully
     - adv. 蓄意地
-- supersition
+- superstition
     - n. 迷信
 - gross
     - adj. （扣去税）总共的
-    - GDP（gross domestic product）
+    - gross domestic product(GDP) 国内生产总值
 - rightfully
     - adv. 正当地
-- confimation
-    - n. 确认
 
 ## 070
 
@@ -106,13 +109,18 @@
     - n. 蛋白质
 - curiously
     - adv. 好奇地
-- **immoral**
+- immoral
     - adj. 不道德的
-    - I have a friedd who has the opposing view and felt that the war was immoral.
-    - Everyone knows Teddy Roosevelt's immotal words,"Speak softly and carry a big stick."
-    - immortal
+    - I have a friend who has the opposing view and felt that the war was **immoral**.
+    - moral [ˈmɔːrəl]
+        - adj. 道德的
+        - n. 寓意
+    - immortal [ɪˈmɔːrtl]
+        - adj. 不死的; 永恒的，不朽的; 神的; 流芳百世的
+        - n. 神仙; 流芳百世的人; 不朽的作家
         - == live forever
-        - 永生的
+        - Angels are **immortal** beings, incapable of death.
+        - Everyone knows Teddy Roosevelt's **immortal** words, "Speak softly and carry a big stick."
 - incidence
     - n. 发生率
 - installation
@@ -134,33 +142,39 @@
     - adj. 完好无损的
 - punctuality
     - n. 准时性
+    - punctual [ˈpʌŋktʃuəl] adj. 准时的，守时的
 - pretend
     - v. 假装
 - genuinely
     - adv. 真诚地
 - refuge
-    - n. 避免
+    - n. 避免；避难所
 - recite
     - vt. 朗诵
 - devise
     - vt. 设计
-    - Since the <ins>dawn (黎明，破晓，...刚出现的时候)</ins> of human ingenuity，people have devised ever more <ins>
-      cunning tools (狡猾的工具)</ins> to cope with work that is dangerous，boring，burdensome，or just plain nasty.
+    - Since the dawn of human ingenuity, people have **devised** ever more cunning tools to cope with work that is
+      dangerous, boring, burdensome, or just plain nasty.
+        - dawn [dɔːn]
+            - n. 黎明，拂晓；开端，开始
+            - v. 破晓；开始；出现
+        - cunning [ˈkʌnɪŋ] n. 狡猾
 
 ## 072
 
 - outperform
     - vt. 超过
-        - Now given the right data，machines are going to outperform humans at tasks like this.
+    - Now given the right data, machines are going to **outperform** humans at tasks like this.
     - underperform v. 表现不佳
 - spotlight
     - vt. 突出报道（以使公众注意）
+    - n. 聚光灯
 - thread
     - n. （缝衣服的）棉线
 - instrumentalist
     - n. 乐器演奏家
-- instrumrntally
-    - adv. 有助益地
+    - instrument [ˈɪnstrəmənt] n. 仪器，器械，工具；乐器
+    - instrumentally adv. 有助益地；用乐器演奏地
 - glow
     - n. 微弱而稳定的光
     - glowingly adv. 热情地
@@ -171,8 +185,11 @@
 
 ## Words
 
-- rise up 起义
-
 ## 词组
+
+- rise up
+    - 起身，站起来；起义，反抗，反抗压迫
+- change over
+    - 转变，改换，切换
 
 ## 句式
