--- a/english/word/low-frequency/073-078.md
+++ b/english/word/low-frequency/073-078.md
@@ -1,4 +1,4 @@
-# 065-072
+# 073-078
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -24,28 +24,34 @@
     - do good deeds 做好事
 - absolutely
     - adv. 绝对地
-    - absolutist adj. 专制的
+    - absolutist
+        - adj. 专制的
+        - n. 专制主义者
 - lameness
     - n. 软弱无力
-    - Her critique of lameness of many public-health campaigns is spot-on... 她对许多公共卫生运动的不足之处的批评是正确的。
-        - A of B of C  C的B的A
+    - Her critique of **lameness** of many public-health campaigns is spot-on... 她对许多公共卫生运动的不足之处的批评是正确的。
+        - A of B of C C的B的A
     - lame adj. 跛脚的，蹩脚的观点
 - unknowable
     - adj. 无法知道的
 - processor
     - n. （计算机的）处理器
-    - process v. 处理
-- foundness
+    - process [prəˈses]
+        - vt. 加工；处理（数据）
+        - n. 过程；流程
+- fondness
     - n. 喜欢
-    - I've always had a fondness for chocolate cake.
+    - be fond of 喜欢
+        - == like
+    - I've always had a **fondness** for chocolate cake.
 - determination
     - n. 决心
 - instill
     - vt. 逐渐灌输
-    - I aim to instill in then the pleasure of giving.
+    - I aim to **instill** in then the pleasure of giving.
 - reputable
     - adj. 声望好的
-    - reputation n. 声望
+    - reputation 🙂 n. 名誉；名声
 
 ## 074
 
@@ -61,21 +67,27 @@
     - arrogant adj. 傲慢的
 - hasten
     - v. 促进
-    - More haste，less speed 欲速则不达
+    - haste [heɪst]
+        - n. 匆忙，急忙; 急速，紧迫; 轻率
+        - More **haste**, less speed 欲速则不达
 - reconstruct
     - vt. 重建
 - mount
     - vi. 增加
-    - mount to 升级到
-    - Hence，people <ins>in mounting numbers (越来越多的)</ins> put great emphasis on teamwork.
-        - in mounting numbers == an increasing/a rising number of people
     - n. 山峰
-        - Mount Everest 珠穆朗玛峰
+    - mount to 升级到
+    - Hence, people in **mounting** numbers put great emphasis on teamwork.
+        - in mounting numbers 越来越多的
+            - == an increasing number of people
+            - == a rising number of people
+    - Mount Everest 珠穆朗玛峰
 - startling
     - adj. 让人震惊的
 - overhead
     - n.[pl.] 管理费
-    - Overhead may be high and circulation lower...
+    - adj. 头顶上的
+    - adv. 在空中
+    - **Overhead** may be high and circulation lower...
 
 ## 075
 
@@ -90,28 +102,33 @@
 - worship
     - v. 敬奉
     - money worship 拜金主义
+    - idol worship 偶像崇拜
     - worshipper n. 崇拜上帝（或神）的人
 - contributor
     - n. 因素
     - contributory adj. 促成的
-    - contribute to 贡献
-        - == lead to/cause
+    - contribute
+        - v. 贡献；有助于；是...的原因之一；捐献
+        - contribute to 导致；贡献
+            - == lead to == cause
 - terminator
     - n. 终止者
 - exclaim
     - v. （因惊讶或兴奋）呼喊
+    - exclamation [ˌɛkskləˈmeʃən] n. 惊叫; 感叹（词）
 
 ## 076
 
 - invalid
     - adj. 无效的
-    - People with invalid papers are deported to another country.
+    - People with **invalid** papers are deported to another country.
 - breed
     - vt. 养育
 - emptiness
     - n. 空虚
 - arbitrary
     - adj. 武断的
+    - He makes unpredictable, **arbitrary** decisions
 - marginal
     - adj. 不重要的
 - rebalance
@@ -119,7 +136,11 @@
 - sharply
     - adv. 急剧的
     - sharpness n. 锐利度
-    - sharpen the skill
+    - sharpen [ˈʃɑːrpən]
+        - v. 使变锋利
+        - vt. 加强
+        - == improve
+        - sharpen the skill
 - diffusionist
     - n. （文化）传播论者
 - propaganda
@@ -129,100 +150,68 @@
 
 - gear
     - vt. 使适合于
-    - The high-schoolers get the same curriculum，but "we try to gear lessons toward thing they're interested in..."
+    - The high-schoolers get the same curriculum, but "we try to **gear** lessons toward thing they're interested in..."
 - overjoyed
     - adj. 极为高兴的
 - mercy
     - n. 仁慈
     - show (no) mercy for
-    - mercilessly  adv. 残忍地
+    - mercilessly adv. 残忍地
     - unmercifully adv. 冷酷无情地
 - Catholic
     - adj. 天主教的
 - captive
     - adj. 被关押的
-    - in captive
+    - n. 囚徒
+    - in captivity
 - transcendence
     - n. 超越
 - hazard
     - n. 危险
 - advent
     - n. 出现
-    - Even after the advent of widespread social media，a pyramid of production remains...
+    - Even after the **advent** of widespread social media, a pyramid of production remains...
+        - pyramid [ˈpɪrəmɪd] n. 呈金字塔形的组织或系统
 
 ## 078
 
-- benign
-    - adj. 良性的🙂
+- benign 🙂
+    - adj. 良性的
 - perpetual
     - adj. 无限的
-    - Nothing seems to <ins>dampen (减弱 == curb == restrain)</ins> his perpetual enthusiasm.
     - == continuous
+    - Nothing seems to dampen his **perpetual** enthusiasm.
+        - dampen [ˈdæmpən]
+            - vt. 抑制
+            - == restrain vt. 抑制
+            - == curb
+                - vt. 抑制，控制
+                - n. 限制，控制；路源；勒马绳
 - discontent
     - n. 不满意
-    - content adj. 满意的；n. 内容
+    - content
+        - adj. 满意的
+        - n. 内容
 - jointly
-    - adj. 共同的
+    - adv. 共同地
 - pharmaceutical
     - adj. 制药的
 - resemblance
     - n. 相似
-    - Aresemble B  A与B有相似之处
+    - There was a remarkable **resemblance** between his and Pete.
+    - resemble [rɪˈzembl]
+        - vt. 像
+        - == (be) similar to
+        - A resemble B A与B有相似之处
 - intimacy
     - n. 亲密
-    - intimate adj. 亲密的
+    - intimate [ˈɪntɪmeɪt] adj. 紧密的
 - frequency
     - n. 频率
 - enlarge
     - v. 扩大
 - abdomen
     - n. 腹部
-
-## 079
-
-- citation
-    - n. 引文
-- burnout
-    - n. 筋疲力尽
-    - burnable adj. 可燃的
-- unlearned
-    - adj. 未受教育的
-- entity
-    - n. 实体
-- primitive
-    - adj. 原始的
-- characterization
-    - n. 描述
-- convincingly
-    - adv. 令人信服地
-- moisture
-    - n. 水分
-
-## 080
-
-- disclaim
-    - vt. 否认
-- dimensional
-    - adj. 空间的
-- perceptive
-    - adj. 有洞察力的
-    - perceive
-- canal
-    - n. （体内的）管道
-- bizarre
-    - adj. 怪异的
-    - == strange == odd
-- raid
-    - n. 突然袭击
-- milestone
-    - n. 重大事件，里程碑
-- undo
-    - vt. 撤销
-- inexpressible
-    - adj. 无法形容的
-- industriousness
-    - n.勤奋
-    - industry 工业
 
 ## Words
 
