--- a/english/word/low-frequency/085-090.md
+++ b/english/word/low-frequency/085-090.md
@@ -1,4 +1,4 @@
-# 081-088
+# 085-090
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,108 +16,6 @@
 - 破折号: —
 - C: Cause
 - R: Result
-
-## 081
-
-- arguably
-    - adv. 可以说
-- sarcastic
-    - adj. 挖苦的
-- diabetes
-    - n. 糖尿病
-- fascism
-    - n. 法西斯主义
-- hindrance
-    - n. 阻碍物
-- embed
-    - v. （使）嵌入
-- blacken
-    - v. （使）变黑
-- carefree
-    - adj. 无忧无虑的
-- commercially
-    - adv. 商业上
-- noncommercial
-    - adj. 无经济价值的
-
-## 082
-
-- hawk
-    - vt. 兜售
-- unfairly
-    - adv. 不公正地
-    - unfair adj.
-- enrage
-    - vt. 激怒
-    - rage 怒吼，怒斥
-- campaigner
-    - n. 从事活动者
-- geneticist
-    - n. 遗传学家
-- despair
-    - vi. 绝望
-- liberalism
-    - n. 自由主义
-    - liberal adj. 自由的
-    - liberty n. 自由
-    - It insists that encomic coordination should involve all 27 members of the EU club,among whom there is a small majority for free-market liberalism and economic rigour...
-- liberalise
-    - vt. 放宽对...的限制
-    - After all,other countries,such as Australia and Britain,have started liberalizing their legal professions.
-- populate
-    - vt. 聚居
-
-## 083
-
-- insider
-    - n. 内部人员
-- tremble
-    - vi. 颤抖
-- conceivably
-    - adv. 可以想象的是
-    - == perhaps
-- reschedule
-    - vt. 重新安排
-    - rearrange
-- infect
-    - vt. 传染（疾病）给
-- repertoire
-    - n. 全部剧目
-- Buddhist
-    - adj. 佛教的
-- toothless
-    - adj. 无牙齿的
-- reasonableness
-    - n. 合理性
-- skim
-    - v. 浏览
-
-## 084
-
-- correction
-    - n. 修改
-    - correct
-- solidarity
-    - n. 团结
-    - Durkheim proposed that religious beliefs functioned to reinforce social solidarity.
-    - == unity
-- agitate
-    - v. 使焦虑不安
-- organism
-    - n. 有机体
-    - organic adj. （有机体）的
-- organizational
-    - adj. 组织的
-    - disorganized adj. 杂乱无章的
-- thinness
-    - n. 瘦
-- prestigious
-    - adj. 有声望的
-    - == well-known == famous
-    - so honored to be admitted to one of the world's most prestigious universities.
-    - 背：I would be so honored to be admitted to one of most prestigious universities in China.
-- unavoidable
-    - adj. 无法避免的
 
 ## 085
 
@@ -211,11 +109,68 @@
     - make more concessions 做出更多让步
 - assurance
     - n. 自信；担保
-    - But take a longer view and there is a surprising amount that we can <ins>say with considerable assurance. (相当肯定的说)</ins>
+    - But take a longer view and there is a surprising amount that we can <ins>say with considerable assurance. (
+      相当肯定的说)</ins>
 - inexperienced
     - adj. 缺乏认识（或经验）的
-- habitual
+- habitual [həˈbɪtʃuəl]
     - adj. 习惯性的
+
+## 089
+
+- gathering
+    - n. 聚会
+    - I was addressing a small gathering in a suburban Viginia living room-a women's grop that had invited men to join
+      them.
+        - address v. 解决
+- slump
+    - n. 暴跌😔
+- blunt
+    - vt. 使变钝
+- structural
+    - adj. 结构性的
+- resent 😔
+    - vt. 对...感到愤怒
+    - resentment n. 怨恨
+- stroke
+    - n. 游泳姿势
+- blueprint
+    - n. 蓝图
+    - == plan
+- deductible
+    - n. 免赔额
+- inventive
+    - adj. 有创造力的
+- illogical
+    - adj. 不合逻辑的
+
+## 090
+
+- implausible
+    - adj. 似乎不合情理的
+- veg
+    - n. 蔬菜
+    - vegetable
+- agony
+    - n. 极大的痛苦
+    - pain
+- endlessly
+    - adv. 无穷地
+- synthetic
+    - adj. 人造的
+- ally
+    - n. 盟友，同盟国
+- symphony
+    - n. 交响曲
+- symphony
+    - n. 交响曲
+- conspiracy 😔
+    - n. 密谋
+- feudalism
+    - n. 封建主义
+- fleeting
+    - adj. 短暂的
+    - fleeting moments 飞逝的瞬间
 
 ## Words
 
