--- a/english/word/low-frequency/031-036.md
+++ b/english/word/low-frequency/031-036.md
@@ -54,7 +54,7 @@
 - irrelevant [ɪˈreləvənt]
     - adj. 无关紧要的
 - privately
-    - adv. 私下的
+    - adv. 私下地
 - vicious [ˈvɪʃəs] 😔
     - adj. 恶性的
 - endorse [ɪnˈdɔːrs] 🙂
