--- a/english/word/low-frequency/067-072.md
+++ b/english/word/low-frequency/067-072.md
@@ -19,19 +19,19 @@
 
 ## 067
 
-- diplomat
+- diplomat [ˈdɪpləmæt]
     - n. 外交官
-    - diplomatic adj. 外交的
-    - diplomacy n. 外交
+    - diplomatic [ˌdɪpləˈmætɪk] adj. 外交的
+    - diplomacy [dɪˈploʊməsi] n. 外交
 - fearful
     - adj. 担心的
-    - == worried
+    - == worried adj. 担心的; 焦虑的; 发愁的
     - fearsome adj. 可怕的
 - loosen
     - vt. 放松对...的管控
-    - Oppfasten: fasten v. 扣牢; 关紧; 使牢固; 系上; 抓牢; 盯住
+    - Opposite: fasten [ˈfæsn] v. 扣牢; 关紧; 使牢固; 系上; 抓牢; 盯住
     - loose n. 放松
-- rebel
+- rebel [ˈrebl]
     - vi. 反抗
     - n. 造反者
     - repress v. 抑制; 镇压; 压抑
@@ -48,26 +48,27 @@
 - cultivation
     - n. 种植
     - cultivate v. 培养，培育，养育
-- singular
+- singular [ˈsɪŋɡjələr]
     - adj. 显著的
     - == very
     - Looking around, I despaired at the **singular** lack of imagination about girls' lives and interests.
-- interior
+        - despair vi. 绝望
+- interior [ɪnˈtɪriər]
     - adj. 内部的
 - unmistakable
     - adj. 不会弄错的
 - confrontation
     - n. 对抗
     - confront 😔 vt. 面临（问题、任务、困难等）
-- grammatical
+- grammatical [ɡrəˈmætɪkəl]
     - adj. 语法的
 - intensely
     - adv. 强烈地
 - counteraction
     - n. 抵抗
-- preach
+- preach [priːtʃ]
     - v. 宣扬，宣称；布道
-    - Practice what you preach. 言行一致
+    - Practice what you **preach**. 言行一致
     - Although nowadays people in mounting numbers talk about the need to be unselfish, we see very few people practice
       what they **preach**. 尽管现在越来越多的人谈论无私的必要性，但我们看到很少有人言行一致。
 - indirectly
@@ -75,13 +76,13 @@
 
 ## 069
 
-- realism
+- realism [ˈriəˌlɪzəm]
     - n. 务实作风；现实主义
 - unrealistically
     - adv. 不现实地
 - collectively
     - adv. 集体地
-- aesthetic
+- aesthetic [esˈθetɪk]
     - adj. 美学的
 - policymaking
     - n. 制定政策
@@ -89,11 +90,11 @@
     - n. 确认
 - willfully
     - adv. 蓄意地
-- superstition
+- superstition [ˌsuːpərˈstɪʃn]
     - n. 迷信
 - gross
     - adj. （扣去税）总共的
-    - gross domestic product(GDP) 国内生产总值
+    - gross *domestic([dəˈmestɪk] adj. 国内的；家用的；家务的)* product(GDP) 国内生产总值
 - rightfully
     - adv. 正当地
 
@@ -105,11 +106,11 @@
     - adv. 永久地
 - shipload
     - n. 船货
-- protein
+- protein [ˈproʊtiːn]
     - n. 蛋白质
-- curiously
+- curiously [ˈkjʊriəsli]
     - adv. 好奇地
-- immoral
+- immoral [ɪˈmɔːrəl]
     - adj. 不道德的
     - I have a friend who has the opposing view and felt that the war was **immoral**.
     - moral [ˈmɔːrəl]
@@ -119,45 +120,46 @@
         - adj. 不死的; 永恒的，不朽的; 神的; 流芳百世的
         - n. 神仙; 流芳百世的人; 不朽的作家
         - == live forever
-        - Angels are **immortal** beings, incapable of death.
+        - *Angels([ˈeɪndʒl] n. 天使)* are **immortal** beings, incapable of death.
         - Everyone knows Teddy Roosevelt's **immortal** words, "Speak softly and carry a big stick."
 - incidence
     - n. 发生率
 - installation
     - n. 装置
-- paradoxically
+- paradoxically [ˌpærə'dɒksɪklɪ]
     - adv. 自相矛盾地
-- vigorously
+- vigorously [ˈvɪɡərəslɪ]
     - adv. 强烈地
 
 ## 071
 
 - inexcusable
     - adj. 不可原谅的
-- staple
+- staple [ˈsteɪpl]
     - n. 主要产品
-- deduce
+- deduce [dɪˈduːs]
     - vt. 推论
 - intact
     - adj. 完好无损的
-- punctuality
+- punctuality [ˌpʌŋktʃʊˈælətɪ]
     - n. 准时性
     - punctual [ˈpʌŋktʃuəl] adj. 准时的，守时的
 - pretend
     - v. 假装
-- genuinely
+- genuinely [ˈdʒɛnjʊɪnlɪ]
     - adv. 真诚地
-- refuge
+- refuge [ˈrefjuːdʒ]
     - n. 避免；避难所
-- recite
+- recite [rɪˈsaɪt]
     - vt. 朗诵
 - devise
     - vt. 设计
-    - Since the dawn of human ingenuity, people have **devised** ever more cunning tools to cope with work that is
-      dangerous, boring, burdensome, or just plain nasty.
+    - Since the dawn of human *ingenuity([ˌɪndʒəˈnuːəti] )*, people have **devised** ever more cunning tools to cope
+      with work that is dangerous, boring, burdensome, or just plain *nasty([ˈnæsti] adj. 令人讨厌的)* .
         - dawn [dɔːn]
             - n. 黎明，拂晓；开端，开始
             - v. 破晓；开始；出现
+        - the dawn of ...的黎明/开端
         - cunning [ˈkʌnɪŋ] n. 狡猾
 
 ## 072
@@ -169,16 +171,16 @@
 - spotlight
     - vt. 突出报道（以使公众注意）
     - n. 聚光灯
-- thread
+- thread [θred]
     - n. （缝衣服的）棉线
-- instrumentalist
+- instrumentalist [ˌɪnstrəˈmɛntlɪst]
     - n. 乐器演奏家
     - instrument [ˈɪnstrəmənt] n. 仪器，器械，工具；乐器
-    - instrumentally adv. 有助益地；用乐器演奏地
+    - instrumentally [,ɪnstrə'mɛntli] adv. 有助益地；用乐器演奏地
 - glow
     - n. 微弱而稳定的光
-    - glowingly adv. 热情地
-- scarce
+    - glowingly ['ɡloʊɪŋlɪ] adv. 热情地
+- scarce [skers]
     - adj. 缺乏的
 - undivided
     - adj. 未分开的
